<resources>
    <string name="app_name">ATC Chat App</string>
    <string name="welcome_to_my_chat_app">Welcome to Android ATC App</string>
    <string name="already_have_account">Already have account</string>
    <string name="create_account">Need new account?</string>
    <string name="login_title">Login</string>
    <string name="create_account_title">Create New Account</string>
    <string name="login_enter_email_hint">Enter Email</string>
    <string name="create_account_email_hint">Enter Email</string>
    <string name="create_account_name_hint">Display Name</string>
    <string name="login_enter_password_hint">Enter Password</string>
    <string name="create_account_password_hint">Enter Password</string>
    <string name="create_account_password_confirm_hint">Confirm Password</string>
    <string name="login_button">Login</string>
    <string name="create_account_button">Create Account</string>
    <string name="log_out_menu">Log out</string>
    <string name="settings_menu">Settings</string>
    <string name="change_image_profile">Change Image Profile</string>
    <string name="change_status">Change Status</string>
    <string name="enter_your_status_title">Enter your status</string>
    <string name="select_image_title">Select Image</string>
    <string name="update_status_btn">Update Status</string>
    <string name="please_enter_all_fields">Please Enter All Fields!</string>
    <string name="something_went_wrong">Something Went Wrong! 😭</string>
    <string name="user_not_created">User Not Created 😭</string>
    <string name="profile_image_Saved">Profile Image Saved</string>
    <string name="select_option_title">Select Option</string>
    <string name="open_profile_dialog_btn">Open Profile</string>
    <string name="send_message_dialog_btn">Send Message</string>
    <string name="log_out_dialog_title">Are you sure you want to log out?</string>
    <string name="cancel_log_out_dialog_btn">Cancel</string>
    <string name="login_title_activity">Login</string>
    <string name="create_account_title_activity">Create Account</string>
    <string name="settings_title_activity">Settings</string>
    <string name="profile_title_activity">Profile</string>
    <string name="other_wrote_hint"> Wrote …</string>
    <string name="i_wrote_hint"> I wrote …</string>
    <string name="message_text_empty">You have to type something to send a message</string>
</resources>
