<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/darkBg"
    tools:context=".activities.LoginActivity">

    <ImageView
        android:id="@+id/imageView"
        android:layout_width="150dp"
        android:layout_height="150dp"
        android:layout_marginTop="70dp"
        android:contentDescription="@string/app_name"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/new_chat_icon" />

    <androidx.cardview.widget.CardView
        android:id="@+id/cv"
        android:layout_width="340dp"
        android:layout_height="320dp"
        android:layout_centerInParent="true"
        android:background="@drawable/bt_shape_3"
        app:cardBackgroundColor="@color/transparent"
        app:cardCornerRadius="6dp"
        app:cardElevation="3dp"
        app:cardUseCompatPadding="true"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/imageView">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="@drawable/bt_shape_3">

            <TextView
                android:id="@+id/textView2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="16dp"
                android:layout_marginTop="16dp"
                android:fontFamily="@font/roboto_medium"
                android:text="@string/login_title"
                android:textColor="@android:color/white"
                android:textSize="25sp"
                android:textStyle="bold"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />


            <EditText
                android:id="@+id/loginEmailEt"
                android:layout_width="0dp"
                android:layout_height="50dp"
                android:layout_marginTop="16dp"
                android:layout_marginEnd="16dp"
                android:background="@drawable/selector_bg_edit_2"
                android:fontFamily="@font/roboto"
                android:hint="@string/login_enter_email_hint"
                android:importantForAutofill="no"
                android:inputType="textEmailAddress"
                android:paddingBottom="2dp"
                android:textColor="@android:color/white"
                android:textColorHint="@android:color/white"
                android:textCursorDrawable="@drawable/bg_input_cursor_2"
                android:textSize="18sp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="@+id/textView2"
                app:layout_constraintTop_toBottomOf="@+id/textView2" />

            <EditText
                android:id="@+id/loginPswdEt"
                android:layout_width="0dp"
                android:layout_height="50dp"
                android:layout_marginTop="16dp"
                android:background="@drawable/selector_bg_edit_2"
                android:fontFamily="@font/roboto"
                android:hint="@string/login_enter_password_hint"
                android:importantForAutofill="no"
                android:inputType="textPassword"
                android:paddingBottom="2dp"
                android:textColor="@android:color/white"
                android:textColorHint="@android:color/white"
                android:textCursorDrawable="@drawable/bg_input_cursor_2"
                android:textSize="18sp"
                app:layout_constraintEnd_toEndOf="@+id/loginEmailEt"
                app:layout_constraintStart_toStartOf="@+id/loginEmailEt"
                app:layout_constraintTop_toBottomOf="@+id/loginEmailEt" />

            <Button
                android:id="@+id/loginButtonId"
                android:layout_width="150dp"
                android:layout_height="50dp"
                android:layout_marginTop="16dp"
                android:layout_marginBottom="16dp"
                android:background="@drawable/bt_shape_3"
                android:fontFamily="@font/roboto_medium"
                android:stateListAnimator="@drawable/state_list_animator_z"
                android:text="@string/login_button"
                android:textAllCaps="false"
                android:textColor="@color/grey_200"
                android:textSize="18sp"
                android:textStyle="bold"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/loginPswdEt" />


        </androidx.constraintlayout.widget.ConstraintLayout>

    </androidx.cardview.widget.CardView>

</androidx.constraintlayout.widget.ConstraintLayout>